# zyp-amaranth-libs

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
zyp_amaranth_libs/litex_glue/: __init__.py  glue.py  platform.py
zyp_amaranth_libs/sim_platform/: __init__.py
zyp_amaranth_libs/stream/: __init__.py  components.py  interface.py
